--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -49,6 +49,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="4dp"
         android:ems="10"
+        android:text = "0"
         android:inputType="number"
         app:layout_constraintStart_toEndOf="@+id/button"
         app:layout_constraintTop_toTopOf="parent" />
